improvements to ingestion